--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                             <div class="col-lg-7 col-xl-8">
                                 <div class="vision-card h-100">
                                     <h4 class="title">Our Vision</h4>
-                                    <p>PlayParadice represents a paradigm shift in the gaming industry. We're combining the excitement of casino games with the transparency of on-chain infrastructure and the long-term incentives of GameFi.</p>
+                                    <p>pPlayParadice represents a paradigm shift in the gaming industry. We're combining the excitement of casino games with the transparency of on-chain infrastructure and the long-term incentives of GameFi.</p>
                                     <p>Everything revolves around one token: <strong>$PRD.</strong> Our goal is simple yet ambitious — to create an ecosystem where players have full transparency, earn sustainable rewards, and participate in a truly decentralized gaming experience.</p>
                                     <p>We believe the future of gaming is on-chain, and we're building the platform to make it accessible, exciting, and rewarding for everyone.</p>
                                     <div class="btn-area mt-4">
