Redesigned feature section with improved layout and styles

--- a/index.html
+++ b/index.html
@@ -221,44 +221,42 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-10 wow fadeInUp">
-                        <div class="prd-vision row g-4 align-items-stretch">
+                        <div class="row g-4 align-items-stretch bg-gradient border rounded-4 p-4 prd-vision-alt">
+                            <!-- Left: Feature List -->
                             <div class="col-lg-5 col-xl-4">
-                                <div class="feature-stack h-100">
-                                    <div class="feature-card">
-                                        <div class="icon-wrap dice">
-                                            🎲
-                                        </div>
-                                        <div class="text">
-                                            <h6>Crypto Casino First</h6>
-                                            <p>Dice, slots, table games and high-frequency betting tailored for on-chain degens.</p>
+                                <div class="d-flex flex-column gap-4 h-100 justify-content-center">
+                                    <div class="feature-card-alt">
+                                        <div class="icon-badge">🎲</div>
+                                        <div>
+                                            <h6 class="mb-1">Crypto Casino First</h6>
+                                            <p class="mb-0">Dice, slots, table games and high-frequency betting tailored for on-chain degens.</p>
                                         </div>
                                     </div>
-                                    <div class="feature-card">
-                                        <div class="icon-wrap gem">
-                                            💎
-                                        </div>
-                                        <div class="text">
-                                            <h6>Token at the Center</h6>
-                                            <p>$PRD powers staking, rewards, cashback, rakeback, VIP and future Layer-2 economics.</p>
+                                    <div class="feature-card-alt">
+                                        <div class="icon-badge">💎</div>
+                                        <div>
+                                            <h6 class="mb-1">Token at the Center</h6>
+                                            <p class="mb-0">$PRD powers staking, rewards, cashback, rakeback, VIP and future Layer-2 economics.</p>
                                         </div>
                                     </div>
-                                    <div class="feature-card">
-                                        <div class="icon-wrap rocket">
-                                            🚀
-                                        </div>
-                                        <div class="text">
-                                            <h6>Future-Proof Design</h6>
-                                            <p>A long-term roadmap that includes a dedicated PlayParadice Layer-2 optimized for gaming transactions.</p>
+                                    <div class="feature-card-alt">
+                                        <div class="icon-badge">🚀</div>
+                                        <div>
+                                            <h6 class="mb-1">Future-Proof Design</h6>
+                                            <p class="mb-0">A long-term roadmap that includes a dedicated PlayParadice Layer-2 optimized for gaming transactions.</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            <!-- Right: Vision Statement -->
                             <div class="col-lg-7 col-xl-8">
-                                <div class="vision-card h-100">
-                                    <h4 class="title">Our Vision</h4>
-                                    <p>pPlayParadice represents a paradigm shift in the gaming industry. We're combining the excitement of casino games with the transparency of on-chain infrastructure and the long-term incentives of GameFi.</p>
-                                    <p>Everything revolves around one token: <strong>$PRD.</strong> Our goal is simple yet ambitious — to create an ecosystem where players have full transparency, earn sustainable rewards, and participate in a truly decentralized gaming experience.</p>
-                                    <p>We believe the future of gaming is on-chain, and we're building the platform to make it accessible, exciting, and rewarding for everyone.</p>
+                                <div class="vision-card-alt h-100 d-flex flex-column justify-content-between">
+                                    <div>
+                                        <h4 class="title mb-3">Our Vision</h4>
+                                        <p>PlayParadice represents a paradigm shift in the gaming industry. We're combining the excitement of casino games with the transparency of on-chain infrastructure and the long-term incentives of GameFi.</p>
+                                        <p>Everything revolves around one token: <strong>$PRD.</strong> Our goal is simple yet ambitious — to create an ecosystem where players have full transparency, earn sustainable rewards, and participate in a truly decentralized gaming experience.</p>
+                                        <p>We believe the future of gaming is on-chain, and we're building the platform to make it accessible, exciting, and rewarding for everyone.</p>
+                                    </div>
                                     <div class="btn-area mt-4">
                                         <a href="javascript:void(0)" class="cmn-btn">Staking <i class="icon-d-right-arrow-2"></i></a>
                                     </div>
