--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                             </div>
                             <div class="text-area">
                                 <h5>Play in the Casino</h5>
-                                <p> Use $PRD (and other supported assets) to wager in the PlayParadice casino on web and, later, Telegram. As you play, you generate volume that can contribute to your rewards and VIP progression.</p>
+                                <p> Wager with $PRD and other assets on web or Telegram. Earn volume to boost rewards and VIP status.</p>
                             </div>
                         </div>
                     </div>
@@ -538,7 +538,8 @@
                             </div>
                             <div class="text-area">
                                 <h5> Grow With the Ecosystem</h5>
-                                <p>As we roll out cashback, rakeback, NFTs, L2 and partner integrations, long-term players and holders benefit from deeper utility and more ways to use $PRD.</p>
+                                <p>"Cashback, NFTs, and L2 integrations boost long-term $PRD utility and rewards."
+                                </p>
                             </div>
                         </div>
                     </div>
