--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@
     <!-- Banner Section start -->
     <section class="banner-section index" id="home">
         <div class="overlay">
+            <!-- Animated Coins and Dice -->
+            <div class="hero-animations">
+                <div class="floating-coin coin-1">🪙</div>
+                <div class="floating-coin coin-2">🪙</div>
+                <div class="floating-coin coin-3">🪙</div>
+                <div class="floating-dice dice-1">🎲</div>
+                <div class="floating-dice dice-2">🎲</div>
+                <div class="floating-dice dice-3">🎲</div>
+            </div>
             <div class="banner-content">
                 <div class="container wow fadeInUp">
                     <div class="row justify-content-between align-items-center">
