--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                                         <div class="icon-badge">💬</div>
                                         <span class="eyebrow">Telegram Mini-Casino</span>
                                         <h5>Play From Your Chat</h5>
-                                        <p>Enjoy a lightweight PlayParadice experience directly inside Telegram. Quick sessions, easy sharing and the same $PRD-driven economy behind the scenes.</p>
+                                        <p>Enjoy a lightweight PlayParadice experience directly inside Telegram. Quick sessions, easy sharing, and the same $PRD-driven economy behind the scenes for seamless gaming anywhere.</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-6">
