--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bizera - Online Gaming Website HTML Template</title>
+    <title>PlayParadice - Online Gaming Website</title>
     
     <!-- Security Meta Tags -->
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
@@ -20,7 +20,7 @@
     <link rel="dns-prefetch" href="https://www.youtube.com">
     
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/prdlog.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fontawesome.min.css">
     <link rel="stylesheet" href="assets/css/jquery-ui.css">
@@ -115,8 +115,8 @@
                 <div class="row d-flex header-area">
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="#home">
-                            <img src="assets/images/logo.png" class="fav d-none d-lg-block d-xl-none brand-logo" alt="logo" fetchpriority="high">
-                            <img src="assets/images/logo.png" class="logo d-block d-lg-none d-xl-block brand-logo" alt="logo" fetchpriority="high">
+                            <img src="assets/images/prdlog.png" class="fav d-none d-lg-block d-xl-none brand-logo" alt="logo" fetchpriority="high">
+                            <img src="assets/images/prdlog.png" class="logo d-block d-lg-none d-xl-block brand-logo" alt="logo" fetchpriority="high">
                         </a>
                         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbar-content" aria-label="Toggle navigation">
@@ -1118,7 +1118,7 @@
                         <div class="footer-widget">
                             <div class="footer-logo mb-30">
                                 <a href="index.html">
-                                    <img src="assets/images/logo.png" class="logo brand-logo" alt="PlayParadice Logo" loading="lazy">
+                                    <img src="assets/images/prdlog.png" class="logo brand-logo" alt="PlayParadice Logo" loading="lazy">
                                 </a>
                             </div>
                             <p class="footer-about">PlayParadice is a crypto-native casino and betting platform powered by the $PRD token, built for players who want on-chain transparency, instant payouts, and GameFi-style rewards.</p>
