--- a/whitepaper.html
+++ b/whitepaper.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Paper - PlayParadice</title>
 
-    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/prdlog.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fontawesome.min.css">
     <link rel="stylesheet" href="assets/css/jquery-ui.css">
@@ -671,8 +671,8 @@
                 <div class="row d-flex header-area">
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/images/logo.png" class="fav d-none d-lg-block d-xl-none brand-logo" alt="logo" fetchpriority="high">
-                            <img src="assets/images/logo.png" class="logo d-block d-lg-none d-xl-block brand-logo" alt="logo" fetchpriority="high">
+                            <img src="assets/images/prdlog.png" class="fav d-none d-lg-block d-xl-none brand-logo" alt="logo" fetchpriority="high">
+                            <img src="assets/images/prdlog.png" class="logo d-block d-lg-none d-xl-block brand-logo" alt="logo" fetchpriority="high">
                         </a>
                         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbar-content" aria-label="Toggle navigation">
