--- a/index.html
+++ b/index.html
@@ -1038,7 +1038,7 @@
                                 <h2 class="accordion-header" id="faq3">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
                                         <span class="faq-icon">🌍</span>
-                                        <span class="faq-question">Is PlayParadice available in every country?</span>
+                                        <span class="faq-question">Is PlayParadice available worldwide?</span>
                                     </button>
                                 </h2>
                                 <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="faq3" data-bs-parent="#faqAccordion">
